--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,20 @@
 {
   "name": "FakeIt",
-  "short_name": "PWA",
-  "start_url": ".",
+  "short_name": "FakeIt",
+  "description": "Social Deduction Party Game",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#317EFB",
+  "background_color": "#1a2a6c",
+  "theme_color": "#00ADB5",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
